--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "material_file_uploader",
-  "version": "0.1.0",
+  "name": "material_login_form",
+  "version": "0.1.1",
   "private": false,
   "description": "> React multi select item from a (text , value) list",
   "main": "dist/index.js",
