--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "material_login_form",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "private": false,
-  "description": "> React multi select item from a (text , value) list",
+  "description": "> React login form according to @material-ui",
   "main": "dist/index.js",
   "directories": {
     "example": "example"
